@@ -1,11 +1,26 @@
+#scene.camera.lookat.orig = -2.78 -8. 2.73
+#scene.camera.lookat.target = -2.78 2. 2.730003
 scene.camera.lookat.orig = -2.78 -1. 3.73
 scene.camera.lookat.target = -2.78 2. 3.73
 scene.camera.fieldofview = 39.1463
 #scene.camera.lensradius = 0.5
 #scene.camera.focaldistance = 10.0
 ################################################################################
-scene.materials.mat-sphere.type = matte
-scene.materials.mat-sphere.kd = 0.7 0.7 0.7
+scene.volumes.vol_glass.type = clear
+scene.volumes.vol_glass.absorption = 0.01 0.01 0.01
+scene.volumes.vol_glass.ior = 1.45
+################################################################################
+#scene.materials.mat-sphere-left.type = glossy2
+#scene.materials.mat-sphere-left.kd = 0.75 0.75 0.75
+#scene.materials.mat-sphere-left.ks = 0.5 0.5 0.5
+#scene.materials.mat-sphere-left.uroughness = 0.1
+#scene.materials.mat-sphere-left.vroughness = 0.1
+scene.materials.mat-sphere-mid.type = matte
+scene.materials.mat-sphere-mid.kd = 0.7 0.7 0.7
+#scene.materials.mat-sphere-right.type = glass
+#scene.materials.mat-sphere-right.kt = 0.9 0.9 0.9
+#scene.materials.mat-sphere-right.kr = 0.9 0.9 0.9
+#scene.materials.mat-sphere-right.volume.interior = vol_glass
 scene.materials.Khaki.type = matte
 scene.materials.Khaki.kd = 1. 0.824176 0.549451
 scene.materials.HalveRed.type = matte
@@ -13,11 +28,11 @@ scene.materials.HalveRed.kd = 0.70003 0. 0.
 scene.materials.DarkGreen.type = matte
 scene.materials.DarkGreen.kd = 0. 0.4 0.
 ################################################################################
-#scene.objects.sphere-left.material = mat-sphere
+#scene.objects.sphere-left.material = mat-sphere-left
 #scene.objects.sphere-left.ply = scenes/cornell/sphere-left.ply
-scene.objects.sphere-mid.material = mat-sphere
+scene.objects.sphere-mid.material = mat-sphere-mid
 scene.objects.sphere-mid.ply = scenes/cornell/sphere-mid.ply
-#scene.objects.sphere-right.material = mat-sphere
+#scene.objects.sphere-right.material = mat-sphere-right
 #scene.objects.sphere-right.ply = scenes/cornell/sphere-right.ply
 #scene.objects.Khaki.material = Khaki
 #scene.objects.Khaki.ply = scenes/cornell/Khaki2.ply
